fix: show navbar options line only on mobile

--- a/src/components/molecules/navbar/styles.module.css
+++ b/src/components/molecules/navbar/styles.module.css
@@ -85,8 +85,10 @@
     color: var(--dark);
   }
 
-  .navbarOptions {
-    border-bottom: 1px solid var(--gray-2);
+  @media (--md-viewport) {
+    .navbarOptions {
+      border-bottom: 1px solid var(--gray-2);
+    }
   }
 }
 
@@ -96,7 +98,9 @@
     color: var(--white);
   }
 
-  .navbarOptions {
-    border-bottom: 1px solid var(--white-2);
+  @media (--md-viewport) {
+    .navbarOptions {
+      border-bottom: 1px solid var(--white-2);
+    }
   }
 }
